--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -65,3 +65,22 @@ a:hover {
 
 z-index:10000 !important;
 }
+
+html, body{
+  height:unset !important;
+  margin-top: 63px;
+  /* min-height: calc(100vh - 64px); */
+  /* min-height: calc(100vh - 100px); */
+
+
+}
+
+@media only screen and (max-width: 600px) {
+  html, body{
+
+    
+    margin-top: 56px;
+    /* min-height: calc(100vh - 56px); */
+  
+  }
+}
