--- a/src/hoc/dashboard/index.module.scss
+++ b/src/hoc/dashboard/index.module.scss
@@ -10,3 +10,11 @@
     background-color: #1976d2 !important;
   }
 }
+
+
+
+.sidebarstyle{
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+  padding-block: 24px;
+}
