--- a/src/hoc/dashboard/index.module.scss
+++ b/src/hoc/dashboard/index.module.scss
@@ -1,20 +1,29 @@
 .customToolbar {
-  // width: 100%;
-  // height: 100%;
-
-  // div[class*="Toolbar-root"] {
-  //   background-color: #1976d2;
-  // }
-
   div.MuiToolbar-root {
     background-color: #1976d2 !important;
   }
 }
 
-
-
 .sidebarstyle{
   margin-top: 0px !important;
   margin-bottom: 0px !important;
   padding-block: 24px;
+}
+
+.logoutButton{
+  position: absolute;
+  right: 20px;
+}
+
+
+.titleClasses  {
+  font-size: 24px;
+  font-weight: 600;
+  padding-left: 25px;
+  color: #fff;
+};
+
+.backgroundCustomColor{
+  background-color: #1976d2 !important,
+
 }
