--- a/src/hoc/dashboard/index.module.scss
+++ b/src/hoc/dashboard/index.module.scss
@@ -1,6 +1,9 @@
 .customToolbar {
   div.MuiToolbar-root {
-    background-color: #1976d2 !important;
+    // background-color: #1976d2 !important;
+    background-color: white !important;
+
+    color: #000000;
   }
 }
 
@@ -24,6 +27,8 @@
 };
 
 .backgroundCustomColor{
-  background-color: #1976d2 !important,
+  // background-color: #1976d2 !important;
+  background-color: white !important;
 
+  color: #000000;
 }
