--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,7 +74,8 @@ html, body{
   /* min-height: calc(100vh - 64px); */
   /* min-height: calc(100vh - 100px); */
 
-background-color: #f9f9f9
+background-color: #ececec
+
  !important;
 
 }
