--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -119,13 +119,14 @@ background-color: #ececec
   text-align: center;
   background: #d3d3d3;
   width: 100%;
-  position: absolute;
+  position: fixed;
   left: 0;
   bottom: 0;
-z-index: 9999;
-padding:1px 0px;
-
+  z-index: 9999;
+  padding:1px 0px;
+  opacity: 0.9;
 }
+
 .MuiFormControl-root{
   background-color: #fff;
 }
